<resources>
    <string name="app_name">"firstapp "</string>
    <string name="title_activity_navdrawer">navdrawer</string>
    <string name="web_client_id">239153872943-hp8ksts5nbf1a1ikdlmm3sobdgmg970n.apps.googleusercontent.com</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_helpnnav">helpnnav</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_profile">profile</string>
    <string name="title_activity_medicine_dic">medicineDic</string>
    <string name="title_activity_pharmacies">pharmacies</string>
    <string name="title_activity_makeorder">makeorder</string>
    <string name="title_activity_cart">cart</string>
    <string name="title_activity_alarm_reminder">alarmReminder</string>
    <string name="app_name5">AlarmReminder</string>
    <string name="no_cardetails">Click on the button below to begin creating your reminder!</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>

    <string name="title_activity_alert">Alert Activity Screen</string>
    <string name="str_btn_set_alarm">Set Alarm</string>
    <string name="str_btn_cancel">Cancel</string>
    <string name="str_tv_message">Opened by Alarm</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="Monday">Mo</string>
    <string name="Tuesday">Tu</string>
    <string name="Wednesday">We</string>
    <string name="Thursday">Th</string>
    <string name="Friday">Fr</string>
    <string name="Saturday">Sa</string>
    <string name="Sunday">Su</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="action_edit">edit</string>

    <string name="add_reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>

    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>

    <string name="editor_activity_title_new_reminder">Add Reminder Details</string>
    <string name="editor_activity_title_edit_reminder">Edit Reminder</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg1">Delete this Reminder?</string>

    <string name="title_activity_today">Today</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_tomorrow">Tomorrow</string>
    <string name="hello_world">Hello world!</string>


    <string name="pill_name">Please insert pill name</string>
    <string name="delete">Delete</string>

    <string name="title_activity_add">Add Alarm!</string>

    <string name="cancel">Cancel</string>
    <string name="editor_delete_reminder_successful">Reminder deleted</string>

    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>

    <string name="editor_insert_reminder_successful">Reminder saved</string>

    <string name="editor_insert_reminder_failed">Error with saving reminder</string>

    <string name="editor_update_reminder_successful1">Reminder updated</string>

    <string name="editor_update_reminder_failed">Error with updating reminder</string>

    <string name="reminder_title">AlarmReminder</string>
    <string name="title_activity_reminder">reminder</string>
</resources>
